--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,7 @@
 @use './components/contact';
 @use './components/portfolio';
 @use './components/studies';
+@use './components/quick-links';
 /* Reset simples */
 *,
 *::before,
