--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,6 +12,7 @@
 @use './components/portfolio';
 @use './components/studies';
 @use './components/quick-links';
+@use './components/back-button';
 /* Reset simples */
 *,
 *::before,
