--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -25,6 +25,7 @@
   --fontSizeH1: clamp(2.1rem, 1.4rem + 2vw, 3rem);
   --fontSizeH2: clamp(1.8rem, 1.3rem + 1.4vw, 2.4rem);
   --fontSizeH3: clamp(1.4rem, 1.1rem + 0.9vw, 1.8rem);
+  --fontSizeBodyLg: clamp(1.1rem, 1.05rem + 0.4vw, 1.3rem);
   --fontSizeBody: clamp(1rem, 0.95rem + 0.2vw, 1.05rem);
   --fontSizeBodySm: clamp(0.9rem, 0.85rem + 0.2vw, 0.95rem);
   --fontSizeBodyXs: clamp(0.75rem, 0.7rem + 0.2vw, 0.85rem);
@@ -33,6 +34,7 @@
   --space-2: 2px;
   --space-4: 4px;
   --space-8: 8px;
+  --space-10: 10px;
   --space-12: 12px;
   --space-16: 16px;
   --space-20: 20px;
