--- a/src/styles/components/_back-button.scss
+++ b/src/styles/components/_back-button.scss
@@ -7,7 +7,7 @@
   background: transparent;
   border: none;
   padding: 0;
-  margin-bottom: var(--space-24);
+  margin: var(--space-24) 0;
   font-family: var(--fontBody);
   font-size: 0.95rem;
   color: var(--colorPrimary);
